[metadata]
name = rhanalyze
description = Radiative Transfer tools based on Rybicki & Hummer (1991)
long_description = file: README.md
author = NSO / AURA
author_email = huitenbroek@nso.edu
license = BSD-3-Clause
url = https://github.com/DKISTDC/RH
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
install_requires =
  numpy

[tool.setuptools_scm]
root = ".."
